[package]
name = "svix-webhook-bridge-plugin-queue-consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-lite = "1.12.0"
generic_queue = { path = "../generic-queue" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
svix = "0.84.1"
svix-webhook-bridge-types = { path = "../svix-webhook-bridge-types" }
tokio = { version = "1", features = ["full"] }
tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"
tracing = "0.1"

[dev-dependencies]
aws-config = "0.55"
aws-sdk-sqs = "0.25"
fastrand = "1.9"
google-cloud-auth = { version = "0.9.2" }
google-cloud-default = { version = "0.2.0", features = ["pubsub"]}
google-cloud-gax = { version = "0.14.1" }
google-cloud-googleapis = { version = "0.8.0" }
google-cloud-pubsub = { version="0.14.1" }
lapin = "2"
redis = { version = "0.21", features = ["tokio-comp", "streams"] }
tracing-subscriber = "0.3"
wiremock = "0.5.18"