[package]
name = "svix-webhook-bridge-plugin-webhook-receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["macros"] }
enum_dispatch = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol = "1.3"
svix = "0.84.1"
svix-webhook-bridge-types = { path = "../svix-webhook-bridge-types" }
threadpool = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
serde_yaml = "0.9"
generic_queue = { path = "../generic-queue" }

[dev-dependencies]
chrono = "0.4"
