[package]
name = "svix-webhook-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["env", "derive"] }
lazy_static = "1.4"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-http = "0.7.0"
opentelemetry-otlp = { version = "0.11.0", features = ["metrics", "grpc-tonic", "http-proto", "reqwest-client"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
svix-webhook-bridge-plugin-queue-consumer = { optional=true, path = "../svix-webhook-bridge-plugin-queue-consumer" }
svix-webhook-bridge-plugin-webhook-receiver = { optional=true, path = "../svix-webhook-bridge-plugin-webhook-receiver" }
svix-webhook-bridge-types = { path = "../svix-webhook-bridge-types" }
svix-ksuid = "0.7.0"
tokio = { version = "1", features=["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version="0.3", features=["env-filter", "fmt", "json"] }

[features]
default = ["gcp-pubsub", "rabbitmq", "redis", "sqs", "webhook-receiver"]

gcp-pubsub = ["generic-queue"]
generic-queue = ["dep:svix-webhook-bridge-plugin-queue-consumer"]
rabbitmq = ["generic-queue"]
redis = ["generic-queue"]
sqs = ["generic-queue"]
webhook-receiver = ["dep:svix-webhook-bridge-plugin-webhook-receiver"]
